udp: fix segfault on closing

Fixes ticket915